2019-09-29  Alan Coon  <alancoon@apple.com>

        Cherry-pick r250483. rdar://problem/55825351

    [Experiment][iOS] Add temporary HTTP header to distinguish iPads for requests to Google
    https://bugs.webkit.org/show_bug.cgi?id=202335
    <rdar://problem/55790994>
    
    Reviewed by Maciej Stachowiak.
    
    * loader/cache/CachedResourceLoader.cpp:
    (WebCore::CachedResourceLoader::requestResource):
    * platform/network/HTTPHeaderNames.in:
    
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250483 268f45cc-cd09-0410-ab3c-d52691b4dbfc

    2019-09-28  Chris Dumez  <cdumez@apple.com>

            [Experiment][iOS] Add temporary HTTP header to distinguish iPads for requests to Google
            https://bugs.webkit.org/show_bug.cgi?id=202335
            <rdar://problem/55790994>

            Reviewed by Maciej Stachowiak.

            * loader/cache/CachedResourceLoader.cpp:
            (WebCore::CachedResourceLoader::requestResource):
            * platform/network/HTTPHeaderNames.in:

2019-09-29  Alan Coon  <alancoon@apple.com>

        Cherry-pick r250345. rdar://problem/55825352

    [iPadOS] [DataActivation] Focus moves away after focusing input fields on www.att.com
    https://bugs.webkit.org/show_bug.cgi?id=202167
    <rdar://problem/55185021>
    
    Reviewed by Tim Horton.
    
    Source/WebCore:
    
    Adds a new site-specific quirk. See WebKit ChangeLog for more details.
    
    * page/Quirks.cpp:
    (WebCore::Quirks::shouldUseLegacySelectPopoverDismissalBehaviorInDataActivation const):
    * page/Quirks.h:
    * platform/RuntimeApplicationChecks.h:
    * platform/cocoa/RuntimeApplicationChecksCocoa.mm:
    (WebCore::IOSApplication::isDataActivation):
    
    Source/WebKit:
    
    When using the data activation page on www.att.com, one of the sections on the page contains several select
    elements; in the case where the user agent:
    
    1. contains the string "iPad", and