@@ -104,7 +104,6 @@ X-SourceMap
 X-WebKit-CSP
 X-WebKit-CSP-Report-Only
 X-XSS-Protection
-X-Temp-Tablet
 
 // These headers are specific to GStreamer.
 Icy-MetaInt
